# fedora-plasma-first-login

./: CMakeLists.txt  Messages.sh  README.md  TODO
data/: CMakeLists.txt
data/qml/: ConnectionItem.qml
src/: CMakeLists.txt  applet.cpp  applet.h  fedora-plasma-first-login.notifyrc  frame.cpp  frame.h  hoverbutton.cpp  hoverbutton.h  main.cpp  page.cpp  page.h  sidewidget.cpp  sidewidget.h  sidewidgetpagelabel.cpp  sidewidgetpagelabel.h  view.cpp  view.h  wizard.cpp  wizard.h  wizardapplet.cpp  wizardapplet.h  wizardpage.cpp  wizardpage.h  wizardview.cpp  wizardview.h
src/declarative/: CMakeLists.txt  chfacedlg.cpp  chfacedlg.h  firstloginplugin.cpp  firstloginplugin.h  locales.cpp  locales.h  qmldir  standardpaths.cpp  standardpaths.h  toolinvocation.cpp  toolinvocation.h  user.cpp  user.h
src/dialogs/: chfacedlg.cpp  chfacedlg.h
src/pages/: colorthemepage.cpp  colorthemepage.h  languagepage.cpp  languagepage.h  networkpage.cpp  networkpage.h  regionpage.cpp  regionpage.h  userpage.cpp  userpage.h  welcomepage.cpp  welcomepage.h
src/qml/: ConnectionItem.qml  main.qml
src/qml/applet/: metadata.desktop
src/qml/applet/contents/ui/: App.qml  Page.qml  PageInfo.qml  PagesSlider.qml  SidePanel.qml  Wizard.qml  main.qml
src/qml/applet/contents/ui/pages/: ChgFaceDlg.qml  ColorThemePage.qml  ConnectionItem.qml  LanguagePage.qml  NetworkPage.qml  RegionPage.qml  UserPage.qml  WelcomePage.qml
